--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --noEmit",
+    "test:accessibility": "echo 'Run Lighthouse accessibility audit or use axe DevTools browser extension'",
+    "test:performance": "echo 'Run Lighthouse performance audit in Chrome DevTools'",
+    "test:all": "npm run type-check && npm run lint"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
